# agix

./: .gitignore  Cargo.toml  README.md
.claude/skills/: my-skill.md
.github/workflows/: ci.yml  release.yml
docs/: roadmap.md
docs/benchmark/: cli-drivers.md  competitors.md
docs/superpowers/plans/: 2026-04-16-agix.md  2026-04-19-command-review.md  2026-04-19-findings.md  2026-04-20-phase-b-kickoff.md  2026-04-24-scope-walkup.md
docs/superpowers/specs/: 2026-04-16-agix-design.md  2026-04-24-scope-walkup-design.md  2026-04-27-rich-plugin-installation-design.md
examples/claude/: Agentfile
examples/claude-code/: Agentfile
examples/marketplace/: Agentfile
examples/minimal/: Agentfile
examples/multi-cli/: Agentfile
examples/package/: Agentfile
scripts/: smoke.md  smoke.sh
src/: error.rs  lib.rs  main.rs  output.rs
src/commands/: add.rs  check.rs  doctor.rs  export.rs  init.rs  install.rs  list.rs  mod.rs  outdated.rs  remove.rs  update.rs
src/constants/: manifest.rs  paths.rs
src/core/: installer.rs  lock.rs  mod.rs  resolver.rs
src/drivers/: claude.rs  claude_code.rs  codex.rs  mod.rs
src/manifest/: agentfile.rs  mod.rs
src/sources/: git.rs  github.rs  local.rs  marketplace.rs  mod.rs
src/ui/: prompt.rs
tests/: add_test.rs  agentfile_test.rs  check_test.rs  doctor_test.rs  export_roundtrip_test.rs  export_test.rs  init_test.rs  install_test.rs  list_test.rs  lock_test.rs  marketplace_test.rs  outdated_test.rs  remove_test.rs  scope_test.rs  update_test.rs
tests/fixtures/mock-full-pkg/: README.md
tests/fixtures/mock-full-pkg/agents/: b.md
tests/fixtures/mock-full-pkg/hooks/: c.md
tests/fixtures/mock-full-pkg/mcp-servers/: d.md
tests/fixtures/mock-marketplace/roundtable/: skill.md
tests/fixtures/mock-skill-pkg/: skill.md
tests/helpers/: mod.rs
