[package]
name = "agix"
version = "0.1.0"
edition = "2021"
description = "Agent Graph IndeX — universal package manager for AI CLI tools"
license = "MIT"
repository = "https://github.com/fantoine/agix"
authors = ["Fabien Antoine <1149128+fantoine@users.noreply.github.com>"]

[[bin]]
name = "agix"
path = "src/main.rs"

[lib]
name = "agix"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
blake3 = "1"
indicatif = "0.17"
thiserror = "1"
anyhow = "1"
dirs = "5"
which = "6"
walkdir = "2"
zip = "2"
serde_json = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = ["github"]
installers = ["shell", "homebrew"]
tap = "fantoine/homebrew-agix"
publish-jobs = ["homebrew"]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]
