[package]
name = "agix"
version = "0.1.0"
edition = "2021"
description = "Agent Graph IndeX — universal package manager for AI CLI tools"
license = "MIT"
repository = "https://github.com/fantoine/agix"
homepage = "https://github.com/fantoine/agix"
authors = ["Fabien Antoine <1149128+fantoine@users.noreply.github.com>"]

[[bin]]
name = "agix"
path = "src/main.rs"

[lib]
name = "agix"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
blake3 = "1"
indicatif = "0.17"
thiserror = "1"
anyhow = "1"
dirs = "5"
which = "6"
walkdir = "2"
zip = "2"
serde_json = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "fantoine/fantoine"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
